-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.8.1
When you close mercurial commit window without any input, it will pop up a window saying "Message check failed. Do you want to proceed?"
And it provides three buttons: Yes, No and Cancel.
But Yes and No seem to be the same. It closes the window and nothing more.
For Gerrit Dashboard: QTCREATORBUG-10451 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
91692,2 | Git/Hg SubmitEditor: Fix buttons in confirmation dialog for close | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |