Git/Hg SubmitEditor: Fix buttons in confirmation dialog for close

Don't show the "cancel" button.

Task-number: QTCREATORBUG-10451
Change-Id: I904794460ef15562eb8db630d33b8a2443b036eb
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>